# stance-nakba-2026

./: README.md  pyproject.toml
stance_detection/: .env.example  __init__.py  config.py  data_loader.py
stance_detection/clustering/: __init__.py  classifier.py  cluster.py  data_loader.py  embedder.py  evaluate.py  predict.py  train.py
stance_detection/inference/: eval.py  evaluate_model.py
stance_detection/llm/: __init__.py  client.py  predict.py  prompting.py
stance_detection/tools/: combine.py  combine_augmented.py  effective_rank.py
stance_detection/training/: __init__.py  baseline.py  contrastive.py  cv.py  multitask.py  multitask_train.py  utils.py
